syntax = "proto3";

package protos;

option go_package = "genprotos/";

service MediaService {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse) {}
}

message UploadFileRequest {
  bytes file = 1;
  string filename = 2;
}

message UploadFileResponse {
  string url = 1;
}
