syntax = "proto3";

package protos;

option go_package = "genprotos/";


service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (ProductIdRequest) returns (GetProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (ProductIdRequest) returns (ProductResponse);
    rpc ListProducts (GetAllProductRequest) returns (GetAllProductResponse);
}


message CreateProductRequest {
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message ProductIdRequest{
    string product_id=1;
}

message GetProductResponse{
    string product_id=1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
    string created_at = 6;
    string updated_at = 7;
}


message UpdateProductRequest{
    string product_id=1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url=5;
}

message ProductResponse{
    string message =1;
    bool success =2;
}

message GetAllProductRequest{
    string product_id=1;
    string name = 2;
    string description = 3;
    double price = 4;
}


message GetAllProductResponse{
    repeated  GetProductResponse  allproducts =1;
    string message =2;
}




